{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 90,
  "lineage": "5b8f6372-6901-5374-c77c-5a73ec1546dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jfs-nat1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f0324c16d7045d16",
            "domain": "vpc",
            "id": "eipalloc-0d9099d2875113eaf",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0906f8afc7a240092",
            "private_dns": "ip-10-0-1-145.eu-west-1.compute.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-34-251-145-40.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.251.145.40",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jfs-nat2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-000b54a958234e88a",
            "domain": "vpc",
            "id": "eipalloc-015c594ba54fe22a6",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0af147d8a6747a057",
            "private_dns": "ip-10-0-2-34.eu-west-1.compute.internal",
            "private_ip": "10.0.2.34",
            "public_dns": "ec2-52-211-47-86.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.211.47.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jfs_bastion_host-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b4b2d87bdd32212a",
            "arn": "arn:aws:ec2:eu-west-1:111528734203:instance/i-0bef6031706510c3b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bef6031706510c3b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc9f00bba9caab36",
            "private_dns": "ip-10-0-1-115.eu-west-1.compute.internal",
            "private_ip": "10.0.1.115",
            "public_ip": "176.34.72.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dff5aed0d85bc1c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b9793108fd626ff",
            "tags": {
              "Name": "JFS Bastion Host - 1A",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04de9c9b8c6d12e6d"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.jfs_bastion_sg",
            "aws_subnet.jfs-public-1a",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jfs_bastion_host-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b4b2d87bdd32212a",
            "arn": "arn:aws:ec2:eu-west-1:111528734203:instance/i-0630d581b129c35bd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0630d581b129c35bd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d6cf41e46d1920b",
            "private_dns": "ip-10-0-2-163.eu-west-1.compute.internal",
            "private_ip": "10.0.2.163",
            "public_ip": "54.154.5.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc40635d2cbadfce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044f885be67519f8d",
            "tags": {
              "Name": "JFS Bastion Host - 1B",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04de9c9b8c6d12e6d"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.jfs_bastion_sg",
            "aws_subnet.jfs-public-1b",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jfs-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:internet-gateway/igw-0871939c0e5637b38",
            "id": "igw-0871939c0e5637b38",
            "owner_id": "111528734203",
            "tags": {
              "Name": "JFS Internet Gateway",
              "Terraform": "true"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jfs_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:111528734203:loadbalancer/app/jfs-app-load-balancer/ad2c3710acb05c36",
            "arn_suffix": "app/jfs-app-load-balancer/ad2c3710acb05c36",
            "dns_name": "jfs-app-load-balancer-1160216152.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:111528734203:loadbalancer/app/jfs-app-load-balancer/ad2c3710acb05c36",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jfs-app-load-balancer",
            "security_groups": [
              "sg-02cd5655b773faedc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b9793108fd626ff"
              },
              {
                "subnet_id": "subnet-044f885be67519f8d"
              }
            ],
            "subnets": [
              "subnet-00b9793108fd626ff",
              "subnet-044f885be67519f8d"
            ],
            "tags": {
              "Name": "JFS Application Load Balancer",
              "Terraform": "True"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.jfs_alb_sg",
            "aws_subnet.jfs-public-1a",
            "aws_subnet.jfs-public-1b",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jfs-back-end-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:111528734203:targetgroup/jfs-back-end-target-group/fea1128fc9a1597b",
            "arn_suffix": "targetgroup/jfs-back-end-target-group/fea1128fc9a1597b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthy.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:111528734203:targetgroup/jfs-back-end-target-group/fea1128fc9a1597b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jfs-back-end-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "JFS Back End Target Group",
              "Terraform": "True"
            },
            "target_type": "instance",
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jfs-front-end-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:111528734203:targetgroup/jfs-front-end-target-group/0a19c302d0f7e6e2",
            "arn_suffix": "targetgroup/jfs-front-end-target-group/0a19c302d0f7e6e2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthy.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:111528734203:targetgroup/jfs-front-end-target-group/0a19c302d0f7e6e2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jfs-front-end-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jFS Front End Target Group",
              "Terraform": "True"
            },
            "target_type": "instance",
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jfs-nat-gateway-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9099d2875113eaf",
            "id": "nat-05f3f08d78d23cc30",
            "network_interface_id": "eni-0906f8afc7a240092",
            "private_ip": "10.0.1.145",
            "public_ip": "34.251.145.40",
            "subnet_id": "subnet-00b9793108fd626ff",
            "tags": {
              "Name": "Nat Gateway-1a",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.jfs-nat1",
            "aws_subnet.jfs-public-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jfs-nat-gateway-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015c594ba54fe22a6",
            "id": "nat-0d68f9600e30ef639",
            "network_interface_id": "eni-0af147d8a6747a057",
            "private_ip": "10.0.2.34",
            "public_ip": "52.211.47.86",
            "subnet_id": "subnet-044f885be67519f8d",
            "tags": {
              "Name": "Nat Gateway-1b",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "aws_eip.jfs-nat2",
            "aws_subnet.jfs-public-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jfs-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:route-table/rtb-0bcf85a3ded49cf0b",
            "id": "rtb-0bcf85a3ded49cf0b",
            "owner_id": "111528734203",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0871939c0e5637b38",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JFS Public Route Table",
              "Terraform": "true"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_internet_gateway.jfs-igw",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jfs_private_route_table_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:route-table/rtb-001cef010a22e6308",
            "id": "rtb-001cef010a22e6308",
            "owner_id": "111528734203",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f3f08d78d23cc30",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JFS Private route table 1A",
              "Terraform": "True"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_nat_gateway.jfs-nat-gateway-1a",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jfs_private_route_table_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:route-table/rtb-06c7355959a5521a3",
            "id": "rtb-06c7355959a5521a3",
            "owner_id": "111528734203",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d68f9600e30ef639",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JFS Private route table 1B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_nat_gateway.jfs-nat-gateway-1b",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Jfs-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e29ce5b4361cc4a4",
            "route_table_id": "rtb-001cef010a22e6308",
            "subnet_id": "subnet-02fb945bcbc86a461"
          },
          "dependencies": [
            "aws_nat_gateway.jfs-nat-gateway-1a",
            "aws_route_table.jfs_private_route_table_1a",
            "aws_subnet.jfs-private-1a",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jfs-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e3a48006c8d0767",
            "route_table_id": "rtb-06c7355959a5521a3",
            "subnet_id": "subnet-0222b899d0f8f7ee7"
          },
          "dependencies": [
            "aws_route_table.jfs_private_route_table_1b",
            "aws_subnet.jfs-private-1b",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jfs-public-1a-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e13e8d57d62c043",
            "route_table_id": "rtb-0bcf85a3ded49cf0b",
            "subnet_id": "subnet-00b9793108fd626ff"
          },
          "dependencies": [
            "aws_internet_gateway.jfs-igw",
            "aws_route_table.jfs-public",
            "aws_subnet.jfs-public-1a",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jfs-public-1b-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8432604de5be4d1",
            "route_table_id": "rtb-0bcf85a3ded49cf0b",
            "subnet_id": "subnet-044f885be67519f8d"
          },
          "dependencies": [
            "aws_internet_gateway.jfs-igw",
            "aws_route_table.jfs-public",
            "aws_subnet.jfs-public-1b",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jfs_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:security-group/sg-02cd5655b773faedc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cd5655b773faedc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security Group",
            "name_prefix": "",
            "owner_id": "111528734203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JFS ALB Security Group",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jfs_asg_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:security-group/sg-0697bc3cdb4b6bdae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0697bc3cdb4b6bdae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04de9c9b8c6d12e6d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02cd5655b773faedc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ASG Security Group",
            "name_prefix": "",
            "owner_id": "111528734203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JFS ASG Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_security_group.jfs_alb_sg",
            "aws_security_group.jfs_bastion_sg",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jfs_bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:security-group/sg-04de9c9b8c6d12e6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04de9c9b8c6d12e6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion Host Security Group",
            "name_prefix": "",
            "owner_id": "111528734203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JFS Bastion Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jfs_db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:security-group/sg-050f0fb38858633ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050f0fb38858633ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0697bc3cdb4b6bdae"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "JFS RDS Security Group",
            "name_prefix": "",
            "owner_id": "111528734203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_security_group.jfs_asg_sg",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jfs_efs_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:security-group/sg-0707aa716425c157f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0707aa716425c157f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0697bc3cdb4b6bdae"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "JFS EFS Security Group",
            "name_prefix": "",
            "owner_id": "111528734203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_security_group.jfs_asg_sg",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jfs_elasticache_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:security-group/sg-0d4127f96da2e54be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4127f96da2e54be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0697bc3cdb4b6bdae"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "JFS Elasticache Security Group",
            "name_prefix": "",
            "owner_id": "111528734203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JFS Elasticache Security Group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_security_group.jfs_asg_sg",
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jfs-private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:subnet/subnet-02fb945bcbc86a461",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02fb945bcbc86a461",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111528734203",
            "tags": {
              "Name": "JFS Private Subnet - 1A",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "JFS Private Subnet - 1A",
              "Terraform": "True"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jfs-private-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:subnet/subnet-0222b899d0f8f7ee7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0222b899d0f8f7ee7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111528734203",
            "tags": {
              "Name": "JFS Private Subnet - 1B",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "JFS Private Subnet - 1B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jfs-public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:subnet/subnet-00b9793108fd626ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00b9793108fd626ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111528734203",
            "tags": {
              "Name": "JFS Pblic Subnet - 1A",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "JFS Pblic Subnet - 1A",
              "Terraform": "True"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jfs-public-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:subnet/subnet-044f885be67519f8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-044f885be67519f8d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111528734203",
            "tags": {
              "Name": "JFS Pblic Subnet - 1B",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "JFS Pblic Subnet - 1B",
              "Terraform": "True"
            },
            "vpc_id": "vpc-006a5d42f2fbdbb28"
          },
          "dependencies": [
            "aws_vpc.jfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jfs_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:111528734203:vpc/vpc-006a5d42f2fbdbb28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00579b702348fd8b5",
            "default_route_table_id": "rtb-07e5803966546a3e7",
            "default_security_group_id": "sg-0b1c4375cb9af524d",
            "dhcp_options_id": "dopt-076773097ec749da5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-006a5d42f2fbdbb28",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07e5803966546a3e7",
            "owner_id": "111528734203",
            "tags": {
              "Name": "JFS VPC",
              "Terrafrom": "True"
            },
            "tags_all": {
              "Name": "JFS VPC",
              "Terrafrom": "True"
            }
          }
        }
      ]
    }
  ]
}